HS-167 Generating sources from yaml and first part of DTO model implemented

--- a/rest/src/main/resources/config.yaml
+++ b/rest/src/main/resources/config.yaml
@@ -1,3 +1,4 @@
+basePackage: "pl.agh.harmonytools.rest"
 apiPackage: "pl.agh.harmonytools.rest.api"
 modelPackage: "pl.agh.harmonytools.rest.dto"
 skipStubs: "true"
