--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -17,5 +17,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Generate rest
+        run: sbt rest/openApiGenerate
       - name: Run tests
         run: sbt test
