--- a/rest/src/main/resources/harmonySolverApi.yaml
+++ b/rest/src/main/resources/harmonySolverApi.yaml
@@ -78,6 +78,9 @@ components:
     #HARMONICS
     HarmonicsExerciseDto:
       type: object
+      required:
+        - key
+        - meter
       properties:
         key:
           type: string
@@ -99,6 +102,8 @@ components:
 
     HarmonicFunctionDto:
       type: object
+      required:
+        - functionName
       properties:
         functionName:
           type: string
@@ -135,8 +140,10 @@ components:
           items:
             type: string
         omit:
-          type: string
+          type: array
           description: Omit element of chord, should be string consists of number and additional characters '>' or '<' representing interval.
+          items:
+            type: string
         isDown:
           type: boolean
           description: Indicates if harmonic function is down or not.
@@ -158,9 +165,15 @@ components:
         key:
           type: string
           description: Key of harmonic function f.e. 'C#'. If not defined, exercise key would be used.
+        isRelatedBackwards:
+          type: boolean
+          description: Indicates if harmonic function is the deflection related backwards.
 
     DelayDto:
       type: object
+      required:
+        - first
+        - second
       properties:
         first:
           type: string
